--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
+
+@layer components {
+  .custom-btn {
+    @apply justify-center rounded-md border border-gray-300 bg-white
+    p-4 text-sm font-medium text-gray-700 shadow-sm hover:bg-gray-300;
+  }
+
+  .dropdown-items {
+    @apply text-gray-700 block w-full px-4 py-2 text-left text-sm hover:bg-gray-300;
+  }
+}
+
 @tailwind utilities;
